fix off-center mobile brand

--- a/styles/navbar.css
+++ b/styles/navbar.css
@@ -65,6 +65,7 @@
 
 .navbar-brand-hover {
     display: flex;
+    align-items: center;
     position: absolute;
     opacity: 0;
     transition: 0.3s;
